--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Topbuilder Construction Template</title>
+    <title>The builders</title>
 
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.png" type="image/x-icon" />
@@ -37,9 +37,9 @@
 	<section class="top_header_area">
 	    <div class="container">
             <ul class="nav navbar-nav top_nav">
-                <li><a href="#"><i class="fa fa-phone"></i>+1 (168) 314 5016</a></li>
-                <li><a href="#"><i class="fa fa-envelope-o"></i>info@thethemspro.com</a></li>
-                <li><a href="#"><i class="fa fa-clock-o"></i>Mon - Sat 12:00 - 20:00</a></li>
+                <li><a href="#"><i class="fa fa-phone"></i>+256 789 172796</a></li>
+                <li><a href="#"><i class="fa fa-envelope-o"></i>info@buiders.com</a></li>
+                <li><a href="#"><i class="fa fa-clock-o"></i>Mon - Sat 8:00AM - 6:00PM</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right social_nav">
                 <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
@@ -57,7 +57,7 @@
     <nav class="navbar navbar-default header_aera" id="main_navbar">
         <div class="container">
             <!-- searchForm -->
-            <div class="searchForm">
+            <!-- <div class="searchForm">
                 <form action="#" class="row m0">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-search"></i></span>
@@ -65,7 +65,8 @@
                         <span class="input-group-addon form_hide"><i class="fa fa-times"></i></span>
                     </div>
                 </form>
-            </div><!-- End searchForm -->
+            </div> -->
+            <!-- End searchForm -->
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="col-md-2 p0">
                 <div class="navbar-header">
@@ -87,21 +88,21 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home</a>
                             <ul class="dropdown-menu">
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="index-2.html">Home 2</a></li>
+                                <!-- <li><a href="index-2.html">Home 2</a></li> -->
                             </ul>
                         </li>
                         <li class="dropdown submenu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">About Us</a>
                             <ul class="dropdown-menu other_dropdwn">
                                 <li><a href="about.html">About Us</a></li>
-                                <li><a href="about-2.html">About Us-2</a></li>
+                                <!-- <li><a href="about-2.html">About Us-2</a></li> -->
                             </ul>
                         </li>
                         <li class="dropdown submenu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services</a>
                             <ul class="dropdown-menu other_dropdwn">
                                 <li><a href="services.html">Services</a></li>
-                                <li><a href="services-2.html">Services-2</a></li>
+                                <!-- <li><a href="services-2.html">Services-2</a></li> -->
                             </ul>
                         </li>
                         <li><a href="#">Gallery</a></li>
@@ -109,11 +110,11 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog</a>
                             <ul class="dropdown-menu">
                                 <li><a href="blog.html">Blog</a></li>
-                                <li><a href="blog-2.html">Blog-2</a></li>
+                                <!-- <li><a href="blog-2.html">Blog-2</a></li> -->
                             </ul>
                         </li>
                         <li><a href="contact.html">Contact</a></li>
-                        <li><a href="#" class="nav_searchFrom"><i class="fa fa-search"></i></a></li>
+                        <!-- <li><a href="#" class="nav_searchFrom"><i class="fa fa-search"></i></a></li> -->
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div>
