--- a/index.html
+++ b/index.html
@@ -155,23 +155,23 @@
            <div class="row builder_all">
                 <div class="col-md-3 col-sm-6 builder">
                     <i class="fa fa-home" aria-hidden="true"></i>
-                    <h4>Professional Builde</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod </p>
+                    <h4>Professional Builder</h4>
+                    <p>We are Professional builders spanning over ten years of experience, with a lot of experience on various projects </p>
                 </div>
                 <div class="col-md-3 col-sm-6 builder">
                     <i class="fa fa-building" aria-hidden="true"></i>
                     <h4>We Deliver Quality</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod </p>
+                    <p>Over the years we have delivered quality proffessional services. We employ experienced personnel, and use modern tools and techniques throughout our work</p>
                 </div>
                 <div class="col-md-3 col-sm-6 builder">
                     <i class="fa fa-clock-o" aria-hidden="true"></i>
                     <h4>Always On Time</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod </p>
+                    <p>We are time concious and can work to deliver and fullfil deadlines</p>
                 </div>
                 <div class="col-md-3 col-sm-6 builder">
                     <i class="fa fa-thumbs-up" aria-hidden="true"></i>
                     <h4>We Are Pasionate</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod </p>
+                    <p>We love what we do, and every working day feels like fun day</p>
                 </div>
            </div>
         </div>
@@ -183,14 +183,14 @@
         <div class="container">
             <div class="tittle wow fadeInUp">
                 <h2>ABOUT US</h2>
-                <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry</h4>
+                <h4>We are a dedicated team of construction pprofessionals</h4>
             </div>
             <div class="row about_row">
                 <div class="who_we_area col-md-7 col-sm-6">
                     <div class="subtittle">
                         <h2>WHO WE ARE</h2>
                     </div>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
+                    <p>We arw the builders of this generation</p>
                     <a href="#" class="button_all">Contact Now</a>
                 </div>
                 <div class="col-md-5 col-sm-6 about_client">
@@ -206,7 +206,7 @@
         <div class="container">
             <div class="tittle wow fadeInUp">
                 <h2>WHAT WE OFFER</h2>
-                <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry</h4>
+                <h4>Below is a list of our services</h4>
             </div>
             <div class="row construction_iner">
                 <div class="col-md-4 col-sm-6 construction">
@@ -216,7 +216,7 @@
                    <div class="cns-content">
                         <i class="fa fa-home" aria-hidden="true"></i>
                         <a href="#">BUILDING CONSTRUCTION</a>
-                        <p>Lorem Ipsum is simply dummy text of the print-ing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </p>
+                        <p>New, industrial, Residential and renovations</p>
                    </div>
                 </div>
                 <div class="col-md-4 col-sm-6 construction">
@@ -226,7 +226,7 @@
                    <div class="cns-content">
                         <i class="fa fa-keyboard-o" aria-hidden="true"></i>
                         <a href="#">PROJECT PLANNING</a>
-                        <p>Lorem Ipsum is simply dummy text of the print-ing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </p>
+                        <p>Quantity serveying, and architecting</p>
                    </div>
                 </div>
                 <div class="col-md-4 col-sm-6 construction">
@@ -236,7 +236,7 @@
                    <div class="cns-content">
                         <i class="fa fa-gavel" aria-hidden="true"></i>
                         <a href="#">HOUSE RENOVATION</a>
-                        <p>Lorem Ipsum is simply dummy text of the print-ing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </p>
+                        <p>Would you consider upgrading your current structure? We are the right partners</p>
                    </div>
                 </div>
             </div>
@@ -249,7 +249,7 @@
         <div class="container">
             <div class="tittle wow fadeInUp">
                 <h2>Our Features</h2>
-                <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry</h4>
+                <h4>For the best construction service delivery </h4>
             </div>
             <div class="feature_row row">
                 <div class="col-md-6 feature_img">
@@ -258,7 +258,7 @@
                 <div class="col-md-6 feature_content">
                     <div class="subtittle">
                         <h2>WHY CHOOSE US</h2>
-                        <h5>There are many variations of passages of Lorem Ipsum available.</h5>
+                        <h5>Get in touch request for a quote.</h5>
                     </div>
                     <div class="media">
                         <div class="media-left">
@@ -268,7 +268,7 @@
                         </div>
                         <div class="media-body">
                             <a href="#">30+ YEARS OF EXPERIENCE</a>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting indus-try. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                            <p>Our experience spans to over 30+ years of Professional services/p>
                         </div>
                     </div>
                     <div class="media">
@@ -279,7 +279,7 @@
                         </div>
                         <div class="media-body">
                             <a href="#">QUALIFIED EXPERTS</a>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting indus-try. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                            <p>Our people are trained and seasoned to Manage and perform various activities in our field</p>
                         </div>
                     </div>
                     <div class="media">
@@ -290,7 +290,7 @@
                         </div>
                         <div class="media-body">
                             <a href="#">Best Customer Services</a>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting indus-try. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                            <p>We have the best customer care, we value and treat each client differently</p>
                         </div>
                     </div>
                 </div>
